That hid too much of the image, this will hopefully fix that

--- a/public/themes/fairview_pier/theme.css
+++ b/public/themes/fairview_pier/theme.css
@@ -13,10 +13,13 @@ body {
 
 #navbar {
 	margin-left: 0px;
-	opacity: 0.8;
 }
 
-#navbar,
+#navbar li:hover {
+	background-color: #5D5757;
+	border-color: #394531;
+}
+
 #page > div {
 	background-color: #5D5757;
 	border-color: #394531;
